Winner logic and refactoring